remove ingress from plex

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,44 +1,44 @@
-#ENC[AES256_GCM,data:jTsIxmckZHqwh8CHoo4TfpOaKwIakVzFUgMzWnOQ6x1isldmd+n9nJtSrlibU770qW2IsKB7pBwBga6bC9KPHvo=,iv:lqCo56NhX4bruItAuIGQhtanst7J2vH5srO1exlNw6c=,tag:sal8b/CgfgBg8lVU3vAfVg==,type:comment]
-#ENC[AES256_GCM,data:JPfiRall0f2fyN+1uCtoCvt/hNYXKrfz17uwJmn2TU7pG9+aPPZB/t9fpWs=,iv:kTlqpNaCaG3TFQQexZrBuhwjAQ+27ES8XpYOgwxEi74=,tag:5H7kUUN4Aw8ziOLJ1a9T3w==,type:comment]
-VIP: ENC[AES256_GCM,data:1RYa5dck9Nxpk/9XRg==,iv:17E/T3KYKREhnkqVjbCo6wyR7IKnNvo9boFCmHXxwGI=,tag:GedO7oLtVeKyX9J+Ubjgfg==,type:str]
-#ENC[AES256_GCM,data:Yv3UjOEIf4O3tHvj+jUffQptUQL6Q2C1UWcV,iv:D8+4l+2bASJHn0ygvW1DoL+RsgfxL3vk6iIx6hXaZfk=,tag:oYqifyQQZtikn8OUExLYkA==,type:comment]
-#ENC[AES256_GCM,data:KB7OywFQbulYl2IMBvaX63IX2AyF/faqFMe4Vh4p/fOVX3nPBR6eVkhmebe0GbFAQtZvtF4OyGaPfPe8zTmUe9yPQf4hVsaSaD4KsR7CwCJs5YDoIqVKALo=,iv:EBrV4qZ6jfo2zIPOLXDUM0y/a4mub0WndZKaKyKJ26Q=,tag:JJktg6gTq0IkduiM3xTOVw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:vmU7jgrQltPpoEzUxc8=,iv:sfCwwzOB/CGhmiKFqDiW9o220gB7uPtU5lg/QgCZulg=,tag:IGRt8m6viY/XC4df7iM0QQ==,type:str]
-#ENC[AES256_GCM,data:rwrfLJeT3aFoV8mt/5NpkznWdzol2UoNJXwFHaA6iOG1LQ==,iv:O42ELkK9gaXWoi/D6BX7CDLkguTLedxMOlk5xguV898=,tag:fMelXR9gSKtbImfcyYOy2Q==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:IMc4aj4S8JLFCRLXsw==,iv:2H1KXZrOjwdhBv6uqYdW/d7LgJIoOvxs/dXGNavcJ60=,tag:/XdYal/EEH8FbXTC5GNHXQ==,type:str]
-#ENC[AES256_GCM,data:y3iw+mrdVR1VKT3ijJbLkeu3vJdJek/zEAS3sTs3gRcAUhd0EcVO1atX7sdsOpQ=,iv:sSTuT/WuycuCrAaGTSAeZ697FoDN/lL0grvxhfA2rA0=,tag:uNyOoSc8XmQymvN7dkmPSg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:TUUbfi+ITZy8y5wsa7RAyTOQ64d5TkTkQLRtMHDFIQ==,iv:3n0Jt0bvYPjwp4A8wueJrTV1FURFnsYoG1P7OHZ7ib8=,tag:QeXmDxhiDqmf2ANtRRKFSw==,type:str]
-#ENC[AES256_GCM,data:eqBj52AIFXRUIfvnzmV1kKnc7rNG7tGcubZJYrBKInO7XxXHwE+0ONScw+6n5+SSQ9oRuG4SrnNg1J2tTnH3PwNF60VGC4TpS2Z3FrtOeqVXaQ==,iv:lDb47lhNL4lYT6rR3sV2mio2mnVb7okzXsTIvhWwfTE=,tag:JDzA+X8Cw+EioNOOvxNuSA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:SeanhIUQIZ/0fKde5eT2,iv:VexTzDvcwkOO8QtCVsVWWgg62gT5eWL8JET4/8B1Fok=,tag:toIroK16ol4gQkHJZFfKcg==,type:str]
-#ENC[AES256_GCM,data:eYP6yyIWoxkHLLOCYHA4v75IricV7nVT2w/zZ8PttfFD,iv:xzxg8XN3qE+vpLc7mkCb6KeNxsAVicrn/+qgrSGGGho=,tag:3yzHaxt60Udmgk6Ht+ePow==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:Y4C3ZP0SXl7qN/PGSf+I,iv:+4ZmHy6aAMYhOXnk9v9PWA+YSH9/veGdYaugJsfaFWI=,tag:k8xVSAAuzPC8tW1Tfmh7eA==,type:str]
-#ENC[AES256_GCM,data:BAXd2XOmmZ4MJWgby5luSDUkgqqZYiXuDP5tiuJod/G86h/zCfcsVTPXO8JAQM/4wAlveJQAiQwOUDvGV5rAdaD/oZQ+cXNO7wBLQQJU2l0=,iv:MpW3g/uW1eob++HmQvDllgE/A4FOA2xF33kwirZi8gc=,tag:pQa3dyCisAZ0aKLsgILUGg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:+k5GRzJ9e88zchDR3C8G,iv:6xOKdazvWhi4XcS9qH1UTvMjIDpwnRFMGSBVLBA0WY4=,tag:oOFlzIJNQzp6x/6EiD1fsw==,type:str]
-#ENC[AES256_GCM,data:zhVtgWK4lhywyM1/bnjAc++RtpXT1eRjkuDPSks36kMlNbA9YcW4F/1iV/GEv5tQYtiyFBtXcm03g3Q3kdGVdElK8TTUhs7LeZOKAEPwFYN1ipBhyBuN,iv:QT3uixGNvokbZRJfq8xOsEWaPTO/J1GUcOUvKenAkqo=,tag:bAH8H68woamg+rx49suLVA==,type:comment]
-#ENC[AES256_GCM,data:vJSQ5PBiMW00NCR4q36owTl+SYjtiEonBBuQbOyDA3MJiFXEqck536CU3AMrrromlb2JIWpVJV+zo26bH6b2k5BC/w368Kc7szmkNAqrMDuumGFE5X6d6wyxePP/YUgIqARoW/QpGn8KzV2cIQCHHBeFoNqJYjwiCMEW6g==,iv:lPC+/qvtcTncC9oXmf6OJqc/y3chdqX+HvUjkpitR5s=,tag:GCUo9VLl/UdbM5GgpvZTdA==,type:comment]
-#ENC[AES256_GCM,data:6p8E9J+3hqZNYCnLNXsr4TbpcLWB3dTsFLutpvg2FOIojvncMsH9OB3EmhpgjoFnFMl6nh31XMU06Zfk1PVsWs5vIa4G/KzSoxRs89maIKs=,iv:txIBgsGthk4W4YWj4u48sc8fvw+IaLfHSRDpkFgtixc=,tag:BYtt26ftPlE5A1XKZ54Vvw==,type:comment]
-#ENC[AES256_GCM,data:9CVJyJpWdavYcNFbOiGmmk93GSUhS6XB8YugrM7GfUrKBbNw3+Vd8zr9mbHEIUznm7glSIIX,iv:C11QJ+3kd/yqEkV+jSPwO8gWTcouHi5ie2cZg4VnLVo=,tag:JODQwBahZt6cBnYHurMbdA==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:GSML4hOlzxjWMoNc,iv:GzrzmVycd5aEiGI6iBg8NBFJl9JwXuyvKfNib+nuVtA=,tag:ND5z+WXvyjIwVg+J+BwDgw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:X3oCzoSjt75enpgr7XTH7ck=,iv:exVSOed6KLnxeOuHamcYBYnqCRcM6/SL/15wuxHRkoM=,tag:bmVNBC1ZrirpPNgGhKcBlQ==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:akMWCZd+gg/oHAmZSCa+e3pOpahu0tznmuEfOJj7aZ4=,iv:sJy61cimdpXuGER/tBhZvtNemu1C8/V4nMM8v3cAOJM=,tag:eMkbLy9G1euWYVU8612eJw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:D/Ok+BlVL4T3iL/wDKlIRI/xz0Xeqztrb/xnENNOorid6vU/40ZD4A==,iv:4eWiZ1wcbwiIGqCQY0s7EGFzOVDYN4aWh2BxMRRGFJ8=,tag:Fav065fdNkF4Mh6U867kFg==,type:str]
-#ENC[AES256_GCM,data:Kxr9qfZna4f9vJEq3NAg9v5D/TD/+awfOlKxWozG8muJzNdtuPZb0ro4yJPypYvQb/FdveH3grgDvHXj/Ur5AQ==,iv:HsZX05NkzUN0Opt6C14/G0xN5soEmYW1qz1AZZrk164=,tag:p7ihJ7h1SpOdtKTPzOWltQ==,type:comment]
-#ENC[AES256_GCM,data:R8DV15IXr5uTvxYlpdrhNqbsFkhqGP+9jB7S0eiItFjxWICfihSI/LAemfyTE/3rE1+L0kW8hlQ=,iv:4UxlRf2gd/rjCnrjLRY/ezoEk6vXvodOv5w45GqZ2I4=,tag:nRBnt1qMq/WOqdUvEBOXLQ==,type:comment]
-#ENC[AES256_GCM,data:1SsitZ0bBgaqdFXeCinrFoGuERnsMvJOUQ==,iv:JNqQo5E1lzYVsOmGFUwyU7kIUeu3rU2sVT3l/3ZpCjo=,tag:O6GUCpKMlrHhVB3bAJ5bpg==,type:comment]
-#ENC[AES256_GCM,data:d9htNf6Q2E0Szc8LEL1LXMAjDJIymDDpCpXjALWfMFCOGRqoJS5dfGjzBxiP3S3AjW0qs9CwxMLAjzbpinCotogJjdVTRZFwDinNQyM=,iv:4d7YXq/3DhGkLddY5CuHTaxAWM3uPjVT7UXuhCyUKTo=,tag:yvYx9MwJWUS904WVVcLYAQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:7E+r3/NMBeKBqf2mfT5W2cw3HedRaBC0Dp3ahjDJ3t3573JoxqZM2Pf1BLIFU87Q,iv:lqQ6TiZ13cw9KfOEciIOpTk9RsmOw1wNdZiUGjZ+xWc=,tag:6UIMbJyGoDWGJZUxRZbAQQ==,type:str]
-#ENC[AES256_GCM,data:WzXnVJSRkBCCeGwHAn5nlfyvHg3n630gg5Livvnc6m4ZpDgt0SLPWDzA3lZJ4Rqmv17xEZTmmsT5bTq8nWzcnuJJLzHv8ss=,iv:2lr3q0WQja7WKZney1sGp5J2Ee/pkzmfN8Vwy8P1Qqk=,tag:tqkwURi0hF+6IDWq7FFiYQ==,type:comment]
-#ENC[AES256_GCM,data:IP9Nc8TEByvlxKohaaZGAuk97SNViPNIrwMm7Fa3zKKluix4mU/ADYySUm92CSvSQJGgigWy,iv:NGqNh4Zo9ijpnaMZtL+phnYQPjbiN9saNEqR0SCLozI=,tag:JtNmG0sVkva2zM4Dtp+tnQ==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:7p5/wQ8DnQ==,iv:IWAFtyCpZXhX3NUUdjzO4gxSn55OhRw3M1Nr5nvQB6M=,tag:gHTVTr4bJA2zYc3qkbbBlw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:F2dfrq02y1YcfOanYhgTjaFdcdI=,iv:cvl393rUJhTHq8FManXDQdacDNoIOewQQncoZcr6RlE=,tag:s19WRDPjzBo78giRmiL36w==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:NOiNp81fKtVlOS8=,iv:pUmrr/p8WsQSMt7ZDam7H+0uc/PzNi0SVdg8jBnYacs=,tag:LcB/fmWAJHelMLcjDaGD7Q==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:m8hdaAvl18VeQjwCbnKp,iv:6Y6+MqrMO4pcR/KlQ6TqwbSkiJ9s5SdRWlEUtv1M9XE=,tag:uRC5pPQOuxYWCVgo7/GoyA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:u3oImvgcLs8bgTABM2pIwTvy6p/NhSe+/g==,iv:IDcsNhsZ2lmQ4w4ioKXqlP6diwK8gZlftrVJ84NqN0Q=,tag:oq2VVcHvkbCN1nN2GWuGpg==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:0zbXo8U12Smyp3oS5jVTKrepG8sGoakY,iv:bezXSTCxaPSxvFV03IzHw8AOgjr6DjnSc1Qe5jOc/sE=,tag:6Oq0Lhks0yp0EHDczilczw==,type:str]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:vXEOdlQV3dbOcrtl45DO2Nnz,iv:X/SgdtAh8RJxtMVIEDqLTfNipKXwRjQX3iVZaWjWAR4=,tag:rwHYPeW9w+mhP4/sa5pccQ==,type:str]
-#ENC[AES256_GCM,data:qeO2dZxjElpMs0t5EXE=,iv:nacDe3uIgHRv9hIh60bacua/phCeQaiNzsyOtoDWSXk=,tag:S4PczoiAt9h6c4Do0hRIOw==,type:comment]
-PODNET: ENC[AES256_GCM,data:Ik5agxPOBx1L7HRjqA==,iv:hHfSbcdGPw65795NF6ocOnXsB3bfGoSMi4kegyGCmQA=,tag:kJNzF6pAv49y/i4J3iS7YQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:vWD178vQh9fwgOzlUQ==,iv:MxRFtfoayKCDMqqNRwpj5QqV2AtBMjby98nxEyFpW30=,tag:fPZzND/LSA6qXYVGOKK1AA==,type:str]
+#ENC[AES256_GCM,data:VnuplBRTKOCUZ7JIl8109KHBhv6JN0Lzi0PTmRUQcXnIkS9vodVPBkmsZ9v7AiDRIVXdgx8RDJfuXMTmllsijJ0=,iv:1v7Lkn/Wpb37+FhgpiDBXzmHT2J8mDHz/I8uTeXQNEA=,tag:X4Vo1BZFn2AHIxU7Xp0zQQ==,type:comment]
+#ENC[AES256_GCM,data:iz0d0GLQVpQqLHAyjYhaKno6ALwPI6/ROjNzMNljwp8yV/adMchFXgWhQwc=,iv:4R/s1Rg0j1BXqavyq3rndw/sw1rylgPv1jZGEUmo+Eo=,tag:7VCZ3nclF7uDMdpI35nvRQ==,type:comment]
+VIP: ENC[AES256_GCM,data:gdEmSUdWPsj0UwjFmw==,iv:zqBttawvNY0WfPvqOGgPcDqRDTzS2GdpzcrwJFcCH7g=,tag:Y1Sfealw/0exIUXoLGtqZg==,type:str]
+#ENC[AES256_GCM,data:FAsoI1MYNMbWdX+SqWzESQmDL31+rfGC78oP,iv:H+XsEuyjCc7NDpvRH+gdC4iL/Q/wczLELRhRGP2YMQk=,tag:5BEEEbx2J+X+QUU6gvbTzw==,type:comment]
+#ENC[AES256_GCM,data:W5GNh4Jfxn5/li1z/BXgO5a69dU6vd8Fe0DEb24VuVEku+mZRG0/wW8vNepTKgfosTXQG0y8lVN+hgd1GiSWZFyhGp+imWJcSiUusGhVNlV8gYqcqRpgPYE=,iv:RI6j+rXpkf2GCW6K5VXbCF9Rgm09gX1komsMry9jlHs=,tag:d1/lzhy5ly46irJdzZ3W7g==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:DYW/Mtp9GbQz9uIDKCE=,iv:9NpLwM0NUFcfeQ7ZZlqyMEjgZhGH2za8ss00i5xuNuo=,tag:El6Ga9aqL6qvirIqlkOFOw==,type:str]
+#ENC[AES256_GCM,data:iyaBXyhbU1wT029z3soZJyH99eFAt5MKhCTuTrqtJ9Wytg==,iv:yCQuHtGwCNZsyYG8ogULOEEzfEFOSJhKzlB7Jty+YsM=,tag:Gp70KeZYUSPeszHy/BUKPw==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:wFZeDX+yb6q8Ic/uQA==,iv:Krp6rFXvqrHsevHzW9lKRD090KW0otAL2ADjBS/RYN4=,tag:ITBikI6c3+h3THNdvFoyjA==,type:str]
+#ENC[AES256_GCM,data:mzopPeRE8iVajdGM3SaQMo2W2NjF4BSAENAjfwOHTkW2vjozv81IkGsaz/ISjIo=,iv:WgRRt7OvAW9JqQX/+Jc8cBztNsbMk+wu2yW4cfXgiVY=,tag:QT2RlXTkhx0RoAluGmAHjw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:Qlp8qE2Af6ux7LCZnTbLwwcTkgaXM/mcAdJQDZFBcQ==,iv:kNh+P3jo1b5kDcES+l8uDFOnLQz58W+hxdghFfIOEw4=,tag:1LF2bNLvHh/1C/TbrTGn+Q==,type:str]
+#ENC[AES256_GCM,data:aaYct4xPMy3qGAsY5+C8eq8r0lg2QXBdnjkK1N2md7ro8haVd3fQjPqTVgbg0QXZZJ9uWz/rFEw6d6tUcD7eaSJeJByPSMwF/WVrI7imnTp9ZQ==,iv:9FWmxXyQmGOns4nbuRqU7QISnuJLok2scelz1FOdFhk=,tag:m6m0kPTbbKqwyqvZW3O5yQ==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:0lAnV/n4AIsZxNxBK6MM,iv:hADftuVbRcZMOj6Td2taZZtkbNFqrXbtJaomyx8x1fc=,tag:yKx1DFB6Wy6kBq/90w1B+A==,type:str]
+#ENC[AES256_GCM,data:7h9VpYWxhg9Zc5KqhL5AC/kQfkIG8ONfXZUOE+yGdCYv,iv:Mw5aROWsbiamgrIYfL8pwiigg/xXRWRlIDvg4pXMKtI=,tag:kx5tmxEzJH7ed3r5CSBxjQ==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:+Zwvqi2peMruPVS/gdF6,iv:nSZ8BKOVTwWPOAYJ0qSUKwd19pyVMGTjBNg0eLv2xoo=,tag:GF7FrTCm+AmQO9wJshfByA==,type:str]
+#ENC[AES256_GCM,data:C5TvOdY4+AeiqZM1xhq6Rx2340tar+etGl3D+pKPx64ksQuqwGdNfIOaXEMQ6IinJ0vkDr9X+ot6HIlhlEylzBhVAotGEYGMU03aUT5bou0=,iv:zexEc6ZZ5jAXnKhtNAdusq2QYl58JxSslTSHAj1AfLI=,tag:583oTZ/kf9IWVX5oHHd2Dw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:pM7AbOlI9CfWryRp0cAL,iv:AW1LNB98WutgVWFADWbSEtd5gu7Qy5q9WgGsk9fXdXQ=,tag:h93OaPgbBBn7hJtzVIuq1Q==,type:str]
+#ENC[AES256_GCM,data:DTXZyd0hcFDCsTNKndfWC9eSXweB5OWarQC0WW+30x60LaV3wTyECu848IjjdD/oYWYa9Thl7xlOPkXhQfGQdSVnv5hD4D+5tTobENI+pQvYR8i0c7rc,iv:LUruQDkSMXtebWcZHnPWQ4cUDq8sgDHns+tkexQSAmg=,tag:4KQJNCmOhiWaofb7bYW1Vw==,type:comment]
+#ENC[AES256_GCM,data:F3W3WEb00nQcDPKwiipEIWhEABI1oy0eD09YhplmEPWdpWtjUeH5ADM/8L+uPAMrwXivhc/yttR7Rh1uvaFO62mbTj4RPQ8b2/il+m/Q33RW92AiCbtwHWpcNaDrM82bn2Y0lL/vSwxSkXxcqJdkVFn9ldzZKP0yDIkfBQ==,iv:+cAf5GrN59dh/BUKc2Orf9k3Lhd8piRVGRIRS2kT++I=,tag:6fGSLdH5Sohuf3JYuetE7A==,type:comment]
+#ENC[AES256_GCM,data:2b6wmkvm8NZxJiGVksJM5xSxSfmwbn3IcGEV+8YHwhFdH9Ckru9zWBifdOXpxr1rDVxWt2P5BakL/YUBzNLVR1MF8dib8gUh7MimiZnQpRA=,iv:WnoNkbgJuYvChW/RlCW5EIFcbs9/op5lKT5qHAjOcI4=,tag:4s/Ot5Ur0q46pU2SyOEPEA==,type:comment]
+#ENC[AES256_GCM,data:WGEE+MV6sRJ5i6fEMPhDvapHJ+D8u7DcDC1K+0ypN9Z0dwMxfeYFyLtF2fxMUnua/YbpcNu2,iv:4K677dc/7ebLXMqfBud9oFkCImPmrNzxYKtoITjo/Do=,tag:wYJbOR29b0WYcMoW89+3TA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:C5lEyH2oqqXSN523,iv:W8dQfHvVZ/Klf44neru45R4RmO1zv4q47scqrMlIY9o=,tag:sOQL+2K5NKqgIHMAu7wB1A==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:SZA8o6oeR2mQCvBcqXKbL/w=,iv:5bNWlrYOsqiSTFrewgRzKupmf16wvZA4JUjOOYmthdY=,tag:A9wHcc/cDp7/9Zwb4Y+bHw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:otUXvc/+RI/ICQQ/nbcoiLb7gohW+Ryy6imtJQX0Iy8=,iv:pndf8vRtQ0LEvuBkBnt78VNjzqHSeJWpVs8cvSVNo5w=,tag:oR3mB2Y/nfhE2XrzrVflYg==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:TaUmk69OJrerPkJCcNA/B+qgZUnsTd5TwxgKtiexceiTl0M5sRgLfQ==,iv:jQv0DYf8+5TV+zdvtSMCu8fQVyId0R/YIZVhgLaVJQc=,tag:ruKlEZuSi4sAKRhnREIgZg==,type:str]
+#ENC[AES256_GCM,data:CFW763cEp++q9MY8jY95prmlNMBFtXizCIKPWLThSQnJzD/vkZ4KxGm4o0nP/H6TmRdQdyKvmakQf6+OjCK5Zg==,iv:QguA3u/21H+n1LTyaMwl2A0x0h1rW7DuoSRQyAxP5BI=,tag:c+N2PYEI6f7lT044apak3A==,type:comment]
+#ENC[AES256_GCM,data:0ZzlIxfMiN4BGh/CgN8nlBA+PVLpEEy9m/LC52dMTXGzBsFGiLEjdqsXYnZIHxgH05wum3Al8V0=,iv:VTTsS9JmVS0viJH9mBbWRdEBOkoNm+2qhCxM5QAKLio=,tag:qp1krRjNNRLhXvfcho+OZQ==,type:comment]
+#ENC[AES256_GCM,data:v5lmzBSa17x40CAVmcl6fvN/S2eoJEguqQ==,iv:jL7YlST0UN43BcK8fqtK/huj3u7sfYtdPK6ldNB5QO0=,tag:cCNSZkNlGPy8ud7p6QGFYQ==,type:comment]
+#ENC[AES256_GCM,data:0k/YzHDFeF6owG87R3nuIm9UbuUmIE+NfEF+qVKCfxKJlIZn1FQAWr564/aTlhXbWNqjWjpEr2y8iJr6d4LzJYPoXrS6o2+ygZNr4+Q=,iv:v8vd544/i9C9BX+1BRnrifjoyF0DmekFJkZg0iVhCTo=,tag:/ExEyhOLlG4FDbOxTbI8Ag==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:lmy4f8wNodZvOR7xHGeCVZ/KF0XWSiNPvbRPXj1e1tzTNF0wwa5nSmjpBnn5ShzG,iv:c7c1MEi6UuD4rlP2o5fylsnhOfyw4qWqyARjRpiJZaY=,tag:HasZmuIPaYORZu166YDpFw==,type:str]
+#ENC[AES256_GCM,data:dzHnXv1b6Kl0MAjS4lKpsneqYFanT2VRgZ6RvpPRFvkZuxOm5G9mPdFw1I+xXOWFGOKqyLSG8W/yI2+58kIf6l6Ds1ajU24=,iv:/Lg3STqu8gpNLnWvjorDQI7UqAQko9OkSH2J8rCwXcM=,tag:d7XIQMQShC3Nhm2t0zu9mA==,type:comment]
+#ENC[AES256_GCM,data:5HrFVmvxnL7N8SgiogGTAIV/jxrUZjd1gvX8QAG0F/Rv11x3yY8QYK3xSbSQBFeOpCKRJGf9,iv:DcPb1Nq3UYZ2t5FGqkQOBCrvr97cBWPEJ2uNnhk6v2o=,tag:A3LXgR/WR9uQskRcSn0/6w==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:8RXQ0A6VIQ==,iv:Av4U5X8aEt4evpPCEcA/wFyLBfkfroGA0t+vakfvVRs=,tag:73k03FsQvIC5Q+LIMMwzJQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:2HIsx7SEtTb2dsdRJBghLyEVnUk=,iv:Zkl+t//5kpW57wgrdx5KGImIg7qEOXyO9VlsdR8ujKQ=,tag:LnyPkTBvE6j7ZV4SEF9M1A==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:HRZJsdfIwXYxyi8=,iv:JQXvkbAdRzbgdaUsshquEUHVSaVmUEq3D57dt4jj6II=,tag:EOJTc9LeVLwtPktl8/qqzg==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:qgZsHE8sEEO5K5ZLtgLy,iv:uSi5Yl1qSxV3vO/SjzX5f6W7//I4rDHXIOe7aV5ZDy4=,tag:POIg47JSBUGNfk/Vj3J3Mg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:TbcxTaY5jtBKbipnAUEFuV4f/UwZj8fpXw==,iv:AKBTm7I3B3+8ttlnTsNu+4ZNtiyxw5p3GBzgGNPcrgQ=,tag:Yh5cC6N7q8wAgKcKmRgTlA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:NWuM0NRmvfor76yV2Uv2VTjvU02gIwjJ,iv:BVMtFsEcsd8zHdlJfMSTtvMaxa/WSfUb4DIX4hWybo4=,tag:TpajsvNm7bZcOxYdCFC+eg==,type:str]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:48RMB89W/Mh5AFUsj6UfKasu,iv:BBp39Co/ZwTJgRrpN+Q/TE2+m+Jq8GC7b/rMvTvV1qU=,tag:JT0hUhozBEUFxRTaDNWMyQ==,type:str]
+#ENC[AES256_GCM,data:WZIl/PBltIQyoUcY11A=,iv:t4Rc4HEv/9Xvl5KI3ckSQsh0Tdfug1OL9Zoy4nou8Uo=,tag:40cRT1kw+ZGuHFLXYiNixg==,type:comment]
+PODNET: ENC[AES256_GCM,data:ZebFPMmfYSqsNmqD4A==,iv:zXiB20AMCnpu5qhF6no0bt/AD5AFucjvW9f0WsG9gAI=,tag:mZZfn2IHqLeOaqbdqQhwog==,type:str]
+SVCNET: ENC[AES256_GCM,data:/AgXI/XXmQvVPKZR4w==,iv:a0hUw+ZSPx2HYBxPztDXcJMZcrQWgVtPXMkc/995zxg=,tag:SxuE5seD1uLyWuKZrnGI8A==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -49,13 +49,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4djV5V2crTFpJT3NEZjU0
-            YWE2NWsyK24yalM5K3oxNDZhdmI2d2dnNlg4CkFJTGFXd2sxREdRUyt2em55eDdR
-            Z3A5em5takhOb0JET3JOYjhqTDVPS28KLS0tIHRwOC92SFVLUmZyMU0zNE52ZUkr
-            R0Q4R28zemNXOTczNTMxMEQ5TGlxV3cK5ejdVnccXqcgieTgKE1dW5TyDOoerifa
-            cWI+pJwBZCm8AnrjCaLxXKtdPQrtvSCTdijcoolUVnoMyMOSrkQvqw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1OSszaW5xdS80LzB3MUZS
+            MFo1ajh3ZlBQTTFMeHZwNEdRWlJnbnowaVdnCjI2R3p3ODFNY0NhZHUzc2lrRDIz
+            TGd0VUN3V3NMRFBncUpRNWxmTUl2bDQKLS0tIDc2QkYzVFIvQzhRMXR0eFZxc0Z3
+            ZGF6QnFRU3V5Um9wTmRRaFlUTlV6bEEKM1PK/B1EFgROdDGLP/97p4x3NSBBn7QB
+            vnaG7/egB/SwzGHVUungHqeUc772GMKrYDZ7EvR3G3DwUXVMNd+2Zg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T15:21:25Z"
-    mac: ENC[AES256_GCM,data:N548OEM6m1JiUyZugxqA9e9Tx5XsuROhp56dp3ATYntFovnvk68Xg/UdeEarqOp3Hrt6ZiGDBerHHJgpviFjhl5KTX7Fsct0yVqVZXeOdIAm114uBWy3PBrcC9DGGxaLi8GyLsrAoVH1zgu7NzqMRmIPv0aotTSkcFpl0MDoiHg=,iv:1iqw9uUP4fwW+kYN7XTibfJq5pu1QeHIWUQwPrVkI8E=,tag:It7sIpOzFuxGTtSFCqT3fw==,type:str]
+    lastmodified: "2025-01-09T15:40:54Z"
+    mac: ENC[AES256_GCM,data:lgaA46J25Cv0rq4Z3QywXDdsO7iDeTCNjVwMsr6EvPK7a9BSpRGhyYyEvJceCrR/OgidS5qZ2DUEsAbAE2EcKCpbJNSwrpJ8y4Bo8sE+SCQP/Bqeg2iy4q2/5TWodIqeJTrine1geVlLPkT4Aw+T8RagwDwmSc313IfyfXhDvtM=,iv:4hXjLZPH8pMiwlDdP42I2O3n/NUuhAiZcwVRQPQttYM=,tag:pCopn8vhHYUM+Nb7BhENqQ==,type:str]
     pgp: []
     version: 3.9.1
