--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,48 +4,48 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:foxYI5sy+Yl9t1O/Q35J0O9lBFKyMCgrkgZYbLu/GtvnihRhEeb3TBWMvd0u7jVPbGrbOPB1u5xOWooCGQRLrLs=,iv:+kxbrT/4Fc6N+Oazt1oEfnK5IP9joZWEXTHSg8GDGIQ=,tag:Z68gpYGs59O/qeP68bnRDQ==,type:comment]
-    #ENC[AES256_GCM,data:wiSidrgjFlfGeYiJ/oLcktfP0UMHooasSxH+WpCJqNMio89Squ3xMRTx404=,iv:31Iv2Y5x91oIeTyPMsfh6CIwnppx/B3pG/tdA6hGzcY=,tag:TIhTe4AZQizFYJSu5QNhCA==,type:comment]
-    VIP: ENC[AES256_GCM,data:cKku660qaJbEEC+eHA==,iv:2nCU65HJCEbN7drKxgfvj3nXEvuDfRBNcHG9HILg+NE=,tag:/K/h3DjN8J3PdKmSKQ4kGw==,type:str]
-    #ENC[AES256_GCM,data:bSRyo/XXKBpCvqscK92y590leYMoLpLxkGup,iv:vOH0KRizd/RKpbrNduqQTbWTrvOpr33eYKPtnJPTKnQ=,tag:yp0EEQMpKloWKyrWKaEWeg==,type:comment]
-    #ENC[AES256_GCM,data:FG/DmfqNlAdn1u8uef2GN2K6eKcl19MRDSFq3bQ/bj9HzIh29pF49Ops9xFDTmoe5iqg66B43UgY6UCgrhyWkr8l/6jAFP2AwF1Itn9l2mhlpuG9fo6CrWA=,iv:jGvkeYaEfqDSjzi2Kxxq1ICO+GN7xYHfDG1ARwvhIOA=,tag:4SmqaDS2ztnhmNvNh3cRkg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:AhEawLkvzFBPOUAM+Dc=,iv:0iTmDe7ouYfkH3/O5X63vTY2+ZKbpf9r8lZ69Nvof3s=,tag:Me26qGlkmUbGIfqofX/tcA==,type:str]
-    #ENC[AES256_GCM,data:HZAseC3GtwkeRs2Um/uB7bCM3pWIxvJUjuA1GFF42seWyg==,iv:N1T6g1TgxLDE63pjkL/f/XGv0mKeeeNQUROWw9q1N6I=,tag:lIO4+Cwg7uF/lADycP5SJA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:GrkNmipNGl+7oDb2+w==,iv:U0YSP2o7qOZLlM9iO6sXEudkMTqYGsuPX6xXr3sTSRM=,tag:lIZaSAhHF3fjeKa8I1Y6FQ==,type:str]
-    #ENC[AES256_GCM,data:DQakbYLZ/H/eZYf9HQLqUAz7THxDBhrTxfbe76/Gtgqs8vdz4M9VR0+bjKz2/jg=,iv:ChI/psGQIbhWZDpVVAfGifMprgVcFxw/eQYdxFnuLKY=,tag:LIv0GZtXbaooAMlKhahzIA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:SAHj75+f1wLw4XypiNB9Xpm+lrWtOyR7U6Ktcf60tA==,iv:L9Q1O4RXa5rV8L9UZE/9SwDEuNCnW2ByHzpYIhkelGA=,tag:TeWSnK/TKu7QmFQ01ZJsRQ==,type:str]
-    #ENC[AES256_GCM,data:R2HgB2jjhugn+3fJC8dvMjoTqcGCB3P04Esx8PpWgRLMWe2b9sEzKT2Xwp084m2HXm5ywcqiE0DwPtET613DUHRbE9Qu5oLq6s9logE17tGldw==,iv:/ESWkYdT6YwiIxE2I1qT1td5nrtogfNzoFUOyrAA074=,tag:TXaI7MBlZ0YiFKCH89AJNg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:bFwHfjksTU3ciOwhiouq,iv:mr+5hb5TRzWs4FhYjOGGSfVpXJ9KJixKFAM7VQJYVa0=,tag:6QKD+iZ/58iT2ExsV4JihA==,type:str]
-    #ENC[AES256_GCM,data:uAIb2DN7WPZJZX/0ZfIgONOoG7aRrHttOTccwZh+vxGn,iv:Cz/yJlE+3fA2uxzOcqLdCG3nv0qgBJCkWw4dbUWKbkQ=,tag:eEjziztEZnW0BoTupDZPiQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:fqod6dfqk1g7ocUr9lKx,iv:mD/lz5Kdyi2skYltWn4m2lEnh8SmpTZhZj6M/tiSL0k=,tag:KmXAt9Ryu6e6C5iMM8DZKA==,type:str]
-    #ENC[AES256_GCM,data:Qla9odG17gwtCfRVlPDreMTr8V+xWGOM202TuzCWU17bf4eDQS00uq8owx1lbCSOdEuPqbFntOQClu0KyPZ2jQZjVR9QEzAc8pwuzngMYrc=,iv:hUUxUP5bpPHohvS+bZ1zJRWYBKdkT3fCHog0+GtCeVw=,tag:nrWrGlF0xqLlAt2K4Ry4BA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:k2Wtl3BUIe9tORdZTX6t,iv:RSEKn6fbC2suAD/xe9qybZNOPWKLfn4GzA9Yn045YA4=,tag:+ZSG0dvGacTv6DCyDIFtXA==,type:str]
-    #ENC[AES256_GCM,data:yS/i326rFzA3z6tc3d/PGnVx13WVDDWhGjwt+XH23VkTPYNWo6Fd9DFUfahGxAWUZdlDqRq6gLQyYggxOunaMe5AAQQNVIHZkQrI+vdsHBdnjmP0YNWr,iv:T7+g4te12lbH3gCBRgFSbKR97FCB15QJbotSHMCQoD0=,tag:umuaQyuXIsrWYybbDGW3eA==,type:comment]
-    #ENC[AES256_GCM,data:PnmzcXPHyIHFm9dv9eWq/N3I+AMqvbT5WtxepDV43+6T2e/eOAF4jmZowX62LgCLl+QAW3aGJE4EV3ghYdXTs/S5L/TdH8SBXK2zetugHjcGcuYuXb6wavUNX//9nINl1ziXCFn9qZW8DjnLttsYyIOZE0xbo5N5K1l21Q==,iv:/YwdT00RmvSh44fEGuHFmTdy+KFkD6bHWFcCFrD4oLY=,tag:L6T/pqidzeJlqBKC/Mwr1Q==,type:comment]
-    #ENC[AES256_GCM,data:d2igzL1/vMmv0yDu8ii9CJZJ5ZdbfzLXYTBAzqI41FFWCi+sXAORI7TM1WvFUedbhoG8fvtlK7IUmK42eNYV0/Kz87pOLvvipBrOIZyiRuc=,iv:aZcuLYMwRzvRFY8hWXFt9mp5BMYDS+LuMmjuc6lUURs=,tag:WKK2wEjRcbdCQeA6auHYaw==,type:comment]
-    #ENC[AES256_GCM,data:5aI6gYaVEIm2KDDR6U1hjLXlPqB1ys8W8rx+r4KqrB0oaBKkgV+QiVacjQ4a9QJK1RrimJPy,iv:wbNkHVu/d0OLelTsZhpmZZmNyh10JPQt8C72xKMwCYU=,tag:XRKMgPgPrt2DKrM4HDV2Vg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:aHS7lPXPca4pqACG,iv:bdVG4DCXuVcwsRXucSrRfdvhitW/nlJ+Maw9uRYwLrg=,tag:W4lHk49EYfqZJmONplR88w==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:4NYcqoSBMBBxCYdKDLBldOg=,iv:VVapXF+glqVKPkTNPQ3J4X1fM+gHjY4QsP/9njeEPM0=,tag:IrgJH9qYiQ4wAgyDVSeVqQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:fdwvbJYYWIfWFcaVWFzkRCMykl9xg5ZpgQnyUxT/HaI=,iv:nGAMxUZbUchJLkH3sGb//PteA/szc8/lG2H0peEPz9s=,tag:M4lpszU3BchNUVC9sM6UPA==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Ns14aysYvsFLy+WYRJPJIK21Q2Y94lPYkasA3QS2SrQIthuanidceQ==,iv:Wm5BCLU57CK+xYyVuJIgpiPFxfXhH66kD3UqQpVkPrQ=,tag:wiMCvODlI1T+7MTlAjEGtw==,type:str]
-    #ENC[AES256_GCM,data:aW7YplQHD2Tk2Lupjopo2K6dU6EeQKbULNOxJt3pYo+0yrbB1tt0j8gyXYAZf3Q5As+6pVN0oJDZqlqINdYa+w==,iv:9qWrN8XmXybqxp5RoxCoxF/j+5LBnngz3AWe22Uh7KQ=,tag:wMbvvnBpYzVWWmgI5Ryf5A==,type:comment]
-    #ENC[AES256_GCM,data:2r9ay7jvoDOCDDAlBKFs/Ya/np7z0Sj2PqdLZQZ/VvFtLaaC/DQPFkj6tJeQLt7Mk+DjXU/87+s=,iv:o3MJZuuBc54884JwbFNs6loHSzFM2bCYJnE2+/AE3OM=,tag:z5SUOgHQqbcBDIaYn3orFQ==,type:comment]
-    #ENC[AES256_GCM,data:afFnw4ykelaj6Bl2Q684dtoKuosZ83c1lw==,iv:EUBOHk2FlMg8cjJgakKTPm044zfic/shkst298gi7TY=,tag:ckK256dLqFKYjdAlqIRXZA==,type:comment]
-    #ENC[AES256_GCM,data:fSc+LDJSNwIuCOc+RwqouHdMOLZvpiL6rIstt/GFqYwxxr8X3WhGQhsKUw+johKO/CXC5+/0esB97G0JR0DpTGTBRCD0T5Ol4PpxNJI=,iv:KjeViYVZfuwfWDV4Tj5kmSbU6GC/llCF0T5gKDAfMq4=,tag:H/PiCcgRGAIxmKKjzAM/ng==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:6zejLW0PMQjDMraLFvZF+5liZF8KJEXgT7HH5Ap1nrfYaCoj/2ohszuBqR/1z3iz,iv:GhyQ2wwJOGM06IDTxFNZKyZnb0JyI34r0wzQ1tf2qrQ=,tag:4RBvs+4uxlQRm0jZk+quFg==,type:str]
-    #ENC[AES256_GCM,data:vVvNRm/l/mMt3/d0mw1iLgUMN9kqWFO+4E9w+MaMOy00MsiY8+CJQzNZZa+TwAcfB6pLIl+9DVSf7u1bFmu2LIehr4YJDxI=,iv:F1E5BHt9lzyfccEDezBSvIZUiGaAle/2x3U51aN8rz8=,tag:sdzHF+jw5EIIW+3DjoGuCw==,type:comment]
-    #ENC[AES256_GCM,data:4x1bhqRTjsBGYVaais6q1cQOTGa3l+pvm9S70xo7ltmSZCbfukY553GhVAyQY+j9ZErDfFmB,iv:okmuhYDe7GXpG6EWjJqb/DeQYibRbCA9QFvxvIu4auU=,tag:zDAUpVgo6TJsAn1ycRK0uA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:925tzXadEg==,iv:ULCPPVLFPK1vY8zcxa9OmC/I9GRWZRi4AZ4QooQRpD0=,tag:4f9aeIY3yHrKY+8hv8sFwQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:7HWvdEL7vror057gTmbOw65l31Q=,iv:32BJ0tJmBgsj9vVPHJ04En4tQYfXixpLXc12Uaa8t20=,tag:L7n98ybEsynbawPD+r7BXg==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:0dpOdlNl3k8Hp7A=,iv:MIX8jAdUK05a1HCgEFqu/pFvuNa344M7AN6YIPW+4h0=,tag:JzIdy7sSdQK4J+h8D8WxLw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:toMlJZkEzr31HVTOe/0C,iv:EClZ70rqL1LKFqP3XgDEAWRyNDwJAXSjUBIZYICbYcI=,tag:MxzRqogbxJzGV57Kx7VttQ==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:c8scFXcRiXHA661DUQXEROXeip4rvekp9w==,iv:Jm+mvA0RCFq98KA81GLauoxfk8WOpnTS2fmOgLE4saQ=,tag:Od+6G+mgPgAfjP0YoIjd5Q==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:gA3lcsH4p1QHYITJ7YJiwbcV2UizI9b+,iv:9r9/dW5pVdH4zYFbHOCkYA2FTD6rnVZ7rtRis55oNVY=,tag:w5oSWdU91AmpeRNlC0wI+A==,type:str]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:ZT79egbffzcVqsEaaX/wQEOw,iv:Eg0zax5p45jKF3Ntz8KaRvWbq5PA7mg2nZLH/bh0+X8=,tag:ZIJwznbrhp2a5Phk9t4oAQ==,type:str]
-    #ENC[AES256_GCM,data:8m9nWoFTL7STbt5AQbU=,iv:T2gWnG2/RxE2mDT9QIS1LYE/T2D5GxBZ81wrgcRE0w0=,tag:RiG+Lzp7jGnJOtPKCWLaTg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:gtS4UeEXJ1DAp1F0Sg==,iv:deMHM/SSB8hV5qaFEPK7xI/SjzTxlBk5I/UVqoJ0c0I=,tag:rQFTFLDVQTYh+vFv2lyECQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:Nbzk8SYCO18uIhz9vg==,iv:nAztefWWqmSpIhUWuPZPk5k7Jlo4JCvknFfqwfNQ3Yw=,tag:ASD+INFRrjzXuF5NAEmprA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:mwDj1Q==,iv:IB+keBiVJXIfcSp6xD/RXZCiq772rbsCFPrrglm1I1s=,tag:VYzRmqTRsRTtFIDEoP1K9w==,type:str]
+    #ENC[AES256_GCM,data:hGf1/m+8k2Z+fzRDT2hhwvFb8wty79YYuu9jF6EqEtg8Cm8pwwJG7gDSuEiEkvGwP5y/7+yLvOjulDSbJSZvbko=,iv:cjYvP9xExunR51ZdLDvHaL4rCRK+K6V7a01VDFtqGxo=,tag:aFqGB6ZRI1zPxuROV7jmcg==,type:comment]
+    #ENC[AES256_GCM,data:8/qB34/JJjqxOdJaeudJQu7BCWDHzjVdmJYXaiJyjtbmrlRGhGnZKEoWhnY=,iv:ONts9lr4PejrHRB9BFKt0aCJL5CcCF4/7jullbp9ni4=,tag:UOVs1FgiRIYFIudRzC+BJw==,type:comment]
+    VIP: ENC[AES256_GCM,data:VLU2odtceqIDOiSjFw==,iv:wDu9IHP1tC6CxII9DiGv4ItioTuxvw4ZKgt79cAbDXk=,tag:SAkwkkfL5OJq4zfwF7F1vQ==,type:str]
+    #ENC[AES256_GCM,data:2NVSrsk7tgJH0JS+zE2zCY0QYtI7Urkg9Y/k,iv:nWw/eckGUhdLJERUOv7LalrpvVJpYdxnpQ2ANdbObsE=,tag:2obifrn3vc++Gbk+MNC/rQ==,type:comment]
+    #ENC[AES256_GCM,data:JiYnGqCAQTUIKKNdVnvGE+bk2WnAcVQnkIXmZd1MD7bJlsdJ8nE0bjX+k+7+S5R/vfHPzlghMnIYgibz5gn9KNautb+/jn2440qld0XVdc7k/vovjT5pY/g=,iv:00FI58U1bjBs6bAKCZvxMPGmhcG97i2M7GjDg3jlzCQ=,tag:59nHJZzIZnUZJbdtC+dwww==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:Tag1GZPnQjBMRDaNbQA=,iv:HqLQRaSH3ZtWFuPItKZqcS11ZfAHrNouZWUCDTdozmY=,tag:MZqaXgG1nJPYHFrklYU0Rg==,type:str]
+    #ENC[AES256_GCM,data:pcBpZLw4s+DLwlQE0ubVDL6bjYVj5JXgCPkhXNRPRSCzVw==,iv:iBZ01TB4rSXNqNs0qJS/Yot6Dwwk24yypR8Yhk8+RDg=,tag:UDyCNt02EQjrHoMz6glRUA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:5jN7x5NumunJUlF5eQ==,iv:i6Q51t+xtz5owJQSCBP0gcSHZW0JMHdTCvq20jq7V7M=,tag:9QwG4R3IFM09t+UNVsMFlQ==,type:str]
+    #ENC[AES256_GCM,data:f2GA5WkbRyLvzxxDmgjZ6cIYgnI+fnCHofG/lHvi6WaFfo4rBQI3C99o7WqGPSs=,iv:RGSy+gsSo3zUbZMgJ0R2mGeZwUPfOxIWL3DriNecygM=,tag:vkAmLGkJ+ZAqeC6ROANFyQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:iNUOa8yLhv/LeD9gLuT3ksrW+pnNNo2VCm7d22i2aQ==,iv:nQqd/rbFyCmexWGPKCHK+V1W28VG/nKhLjjMQq6Q0kk=,tag:+53vFS0tt6EfVu5flx/oMg==,type:str]
+    #ENC[AES256_GCM,data:TnxAgclJGSM3MBSTCPhFsC9/nfKGfWl2C8IoukBjo4XNg4QsMfrioSCR6YyQAXDCEtqrpqaApACOmW+Lzyitopya896RbspA4813soEWtjl7zg==,iv:KEPH16CA206LkK5eUqWh5H0wSBfJd+uhcSKX266S0aE=,tag:188fIIJjAPMn/0+SfD75ww==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:BFJEpXWvl8t/C+n4pgYT,iv:3VJihLH6QHRC/VtYdiN56w6ZQ0/KlTViJhqynIbzg04=,tag:kcujxMKxCKZZ7yZm2VJyvQ==,type:str]
+    #ENC[AES256_GCM,data:ksmF+h+3rNJivi67rkNC0woAZqLg8jlTdpN5TH2QUr3+,iv:vynkfsWguXHWOX70FA9Mo5RMY8xccmV8JUsB4sBX2Og=,tag:d5RmdZqs2Q+HzqkO8Sbn1A==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:+nEd7e3HOvsQuH+VolnG,iv:M4ru9Y/WyAKLuR+60tyyYu1jiNGXr7lEd4h/+c41SHk=,tag:QHcDqNinPhE5JlwURHjnQw==,type:str]
+    #ENC[AES256_GCM,data:dJ2w09ei97PnuMkRM3ZeLKdzZkG87gcNcpcM1P0g9LlOUows57GmTwCvtiR7VQSrC22/tE6ZQgJbEcux7qx4yBRXQ/itm11KXu0U2zBl24w=,iv:52lfVcd7zJBGajMEy6uT5nRF2x26id6w/RhxeuPTMwc=,tag:0/8QxXF6MSYiDeKydiWXKA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:Udd2PFw4SSpj+h2KBVX4,iv:oU2c8mECjTJ9hdjM1irzLcUYubSjiKXA8EGqxyROds0=,tag:XaYgHYMTw2iQoEhNPFWa1A==,type:str]
+    #ENC[AES256_GCM,data:w9lL0+aNA7By/e+eWgKamI1vtdkc49rX1vTlB4kSFaD6/bsA/wRNX/y8O2i7P/Pm1HNX6Hlq7M1SV5YAU/AEez3kAgRlhvwHHx+JUIRaAc8nQIJEbcvF,iv:SOa1RjPoWWemNkcNnYQ3lxdN3qsYITjqcRTd5YxhR9k=,tag:vUqnExJ8IBCrBzh9abxQTA==,type:comment]
+    #ENC[AES256_GCM,data:SjnJvHKyxrG0WWZ3bOddO6oloYDJAhR4QDBLQElmzxjb1ebFj8jKRUCJ8sfq4tAtfcrp8ER3CwiZmuyvq9b1p7ljmUorixLBT6lCK04Nm9zGepBbLpnnwfOrSWgqP4H7klza8P2uuir8E17ui2+Q90FzIcUvXQMtnMSBVA==,iv:Dn93PhWvq8q3iEU2WyFnWPQQlwwIzOWLhHmmjpgVkwE=,tag:JqMT+LhLr8c0XkDyfjeNLA==,type:comment]
+    #ENC[AES256_GCM,data:9U3lBq3nrbRLeMOYlWr28hNQid9fG9dyJNhac5XYHYz9aM34kAvIQoWcS0xLlmIaPeUFOKr3E86KsvmwjcYZiZzJwAdxHkFkdQGI0w8xXik=,iv:jmbO5nDciXpoWVMWmobnE3LxF0K5D3dACD/AgvEXUrg=,tag:Ba7RK2zjC5z6B5n+EqWIDA==,type:comment]
+    #ENC[AES256_GCM,data:40NYxsQwTfvkoVDzO+0uP+d7ZwDdmPuFBfvb4bGte/A5v8b+8Ic7XNJslmY+V3ckspUr7Zjr,iv:mZ9LJWlsvD/4LVyTczirv2+YDIZ0JvojtYjZETt+ZW8=,tag:ffgWg1SnR6m8QhKBK1BFMw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:EcJQW50S7Me1hDKH,iv:UoGijNvXgbii6sfm1QJfvSTwzPWALfd0yDJzrZy9I6E=,tag:xPcd9WesGEnZ0uWfLY1JCg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:665+70NaAJSjdW69NCZZxpA=,iv:jXRotYDu9VOwOtBbesyZ8ItAul5oC81krcBs30nSAEY=,tag:Ar6JhO1/GDdKIfFsgDpLbQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:y1k3M5pXB6sQNUIso7tgDjevt4E9uO9+lwB1PmMQF9A=,iv:UVrBfK8YiTssGvrwDrPPpsN6FLUjfXuTw6ZgH6Xv5wY=,tag:90V9WE2m27hN58ccHXskNA==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:74l17l7ms31AX5C/MaJbUdYTkHHNoon03kfc+XkLB8ZMf8Yc4q6pkg==,iv:MdG8Vce6IHu6aGt5/JHjDUPb2JVM7Oz+ydDguxaSF3Y=,tag:323vckxrVN2mkvtcn5y/BA==,type:str]
+    #ENC[AES256_GCM,data:IdzZFOKlRnqLrE1RRuq1wVnUWFVKtCrpaOUIrRXIRWLFfoEJpaGCSv2vhFMZdBWJXN1UmW6RFvDLbcZmDim5lQ==,iv:vmqeuEwO/JcP4eaZGgubZWN1kVMmHmTFJ7vMYToGTfQ=,tag:eiptKKCMgc77cxaYqScAdw==,type:comment]
+    #ENC[AES256_GCM,data:OvOzSQGDOeQsW/fxEkumQaVpDg8KvS3sX5h3is1hfwWjQwRGPLx+myZXR0EDM9qI+WrWdlzBCKU=,iv:nRToCuaclG3CR5sXBe1Kf+Oz7IuYnYNh2qBPTzT/WWI=,tag:KzjQCKtgJzp4KgOUiyOhhg==,type:comment]
+    #ENC[AES256_GCM,data:i8QvUvWYjE0XTVhPcNjTPssZm7YGr2tMdw==,iv:vY1SjkJvQcBvm5OvqWvcBYpwu/q1qDYID2shn9+wLxw=,tag:CVA38EPAtK1vpsRf9wugMg==,type:comment]
+    #ENC[AES256_GCM,data:VcefRWCBOjBhOQFGPPJBOKSHDkabz64U9ffMF8f28Vdf5xDysVNYSD+31rHYoAoihxL3A4KPI6x6Qa5sloS85eVXWXEI21nzD9n7BFQ=,iv:lg7LubcgPorYFk3hVq6Gncp0db4Ccgabo3Rk9xIi9VE=,tag:ujHPJJw9yFLoE6IYSjlf4Q==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:jtopoOlDtGPOqQCIFcwIxEwPiz75AXJhqJ7lvu7x8PKSzXHgGCU4FzhHxCCLhyUx,iv:HmBAwQZjQdm9QKx6f1MfF19xiZrYxkjntsHYADjJLhs=,tag:hdS5Jg/d9q8HYwmDLZq9Cw==,type:str]
+    #ENC[AES256_GCM,data:dHCcxcIJ5eEq9tQZer25Ml1jIBxDn/F9dPBgTV1i3DZLkSdZt8WR1rHjfEDllM7zT7ZuCrdbOI2OZnZYVlQmg778pcGz7/8=,iv:xUwGpiINQ9H30jfaFJtviBhKBVMKD1CngEvEvKshkcc=,tag:XIOxGtYqZbev4L/AGL7Gsw==,type:comment]
+    #ENC[AES256_GCM,data:1yGj8psXvETJxlczdPygEY7VPkRrYamQIfLdTV/9CV0nzGTyhsEmBeLqra70jXRdQcFRqP2E,iv:UY9xeihLUtzKwTsADE0V20ErGJHpPCIiGl18cF8KLl8=,tag:SrGcg5XM7BK/5xaiqcH7bQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:1FP8snDAAg==,iv:nf6OzECpoJ2oFyLoJdHRvRK6G1piEbMYo1H2unuMMAg=,tag:XeTTzkZSpL7uJ1AvTHrSjQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:u7v5Y98isT5BWmZQqBTBweTLD6Q=,iv:2C1bw1WgvDw/eiiHr5e134x/maBTQHgCuTikrovOlWE=,tag:UlF88gwfnkmWP2d4gplgXQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:PSK/1eeAPGckLG4=,iv:DvgOsyTHHfwagFW07ZpOneDvNXYyNuWhDK7Fe7AZcm4=,tag:vEBANR5z10Rh1V+49wj4Pw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:aJMO8MB8OT+PP16reFVp,iv:fqiPSoecc3xmkR6CUt81ZczGVG9Wo2vmtY8G/blPkQI=,tag:VX8MDGqN4BhleJT9KziAkw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:FkdqsHRDe6Ghv3mCKCveXOVJYws0JHLuqw==,iv:ieTfr0jKBsp1xsVgPVt1VnqR2Um9yZv5DTB/QEnBEoo=,tag:sjdlJm6Nrd7m0HwigV8mwg==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:nutElsmkEBnnGMNAkrakyrjd2eopblby,iv:biKns53rPdDGAV9jZMpCnheN4hsBjEtOG3knWHla9zc=,tag:oqrDfuosi2C12FqQLJLvsQ==,type:str]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:A5z6rO5TOQ17vQtGvepEwI9P,iv:AW1dF7igw4MHyxpJt/4kLaPsxiZVoc1nclIlXtlJ+ns=,tag:XZp2WlOVKRPgNsmglOcftg==,type:str]
+    #ENC[AES256_GCM,data:VSh8gA+IocEZ3seEiP0=,iv:XeoVIkBsl7pJy41akODaSO5OAY6zs3wLFkGoeFZsRrQ=,tag:Q/MHzLkBcQwtari/nlToSg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:9BGwXVVsfUuPUzpE+Q==,iv:wOw2EHYggSuEdmknjLF1MpH4iERAGVmtWHueQwPLvs0=,tag:gXtzUf3TYR7DdMYnrwrD3Q==,type:str]
+    SVCNET: ENC[AES256_GCM,data:ReOE+JIlD3G68GrUTg==,iv:4HrMsYDSXzXCdzZ797u1C8As6ho4en0OdTRD9hR9F6k=,tag:Nxx6W5/VNSz3TNnWbzesKw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:oLTjKw==,iv:NAvwWT1HuJ2k9hlkEdvtKA1MgvPgQF7lZnu2Z5zt9S8=,tag:f4NqvpEQ90K5w3Xhv6+DrA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -56,14 +56,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmcDByWjJwamtIeFF2bm4y
-            WFRSOWZTUklaT01aZzlrZVZubENEaHdMdWwwCi9Feks4S29wVXlmTGhTOS9vK3BP
-            a1lRK3ZmVDRSWCtvY0liWkJUZFhUb28KLS0tIGdVSEJOVGp6NkNJb2doTnpWZUYv
-            Sks0eUM4UFhMei9wSTE5Vm5Vd2xWaVEKzuUGzyWVv9POAoXC0kpxdJ1pkadPaQdl
-            bNARo2S5UPH4qKUt2Eg0PMG093opabpV7/8Aw/Q+4DURKpy5c/rhBw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGQjgrMTc2RnhvVFVrb2o0
+            UzVoSWM4V1NaWEcrK2VUb3A5MTczajR3azBnClRyL0lwcVRkWTRDdHlxMDlmMk9Q
+            cHpabzhnakNjUHhxQ3ZETWc5cUJxdnMKLS0tIEFvdEJTbGtoSEVKR1R5RUw4MGxF
+            c0pxcjkzL3FMUnMwNXNTQ1V6Z25lVm8KXwCN/HjK9dZveoPC8VHSUnSUniuehAcL
+            yTVIZRturG+jXKFNFQiTVHbhgECyFval9Pj7vydKR0kd8c3hXmzi3g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T15:21:25Z"
-    mac: ENC[AES256_GCM,data:t7e7s1OlVc0yBSYrobU9EUe5M5b1w5dacL/6uLvIUxWFj8G0y7gMNWmbekPmye6KhMaJ3OW1oSoL0Aw7uO4I9sM2/6eFnRIZKSnG2uaIsTKt2TTbLSz1qMEGK5vnImJ4YO+RGa2Zak4DGH8ixyG39Ycr0Fi2/WznFWJhgaMocZ0=,iv:dZeN+YCrBgNyuYNoltppzZxeWpv0QP2PJZ3BmOERFaM=,tag:wftbgR73p5Mj+kl3nqVRVg==,type:str]
+    lastmodified: "2025-01-09T15:40:54Z"
+    mac: ENC[AES256_GCM,data:Dq7nlIYUZrB9vXX94b3xIoxCXTSiWTpC6Q79vkFBXN40ilbgCJcImo0cNKWZjAkrNJR+F++DCmdSD8vKCn/wscC7GZO7akfvzZmd9fEccXrkFlw61/mu7ZOjVXQiRMZApnhhyHr3ONOZQPNadeekBZ/qSRIv62AFpRmESTGTZ14=,iv:hAWaOUYz/o5DoovtLut1PH7ZPbSnk2hglFARguvhLlg=,tag:Z6Rf4sUOYB6gCOW7r5FKng==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
