--- a/clusters/main/kubernetes/apps/plex-pass/app/helm-release.yaml
+++ b/clusters/main/kubernetes/apps/plex-pass/app/helm-release.yaml
@@ -50,19 +50,19 @@ spec:
         loadBalancerIP: ${PLEX_IP}
     ingress:
       main:
-        enabled: true
-        integrations:
-          traefik:
-            enabled: true
-        tls:
-          - hosts:
-              - plex.${DOMAIN_0}
-            clusterIssuer: domain-0-wildcard
-        hosts:
-          - host: plex.${DOMAIN_0}
-            paths:
-              - path: /
-                pathType: Prefix
+        enabled: false
+        # integrations:
+        #   traefik:
+        #     enabled: true
+        # tls:
+        #   - hosts:
+        #       - plex.${DOMAIN_0}
+        #     clusterIssuer: domain-0-wildcard
+        # hosts:
+        #   - host: plex.${DOMAIN_0}
+        #     paths:
+        #       - path: /
+        #         pathType: Prefix
     persistence:
       media:
         enabled: true
